@@ -3,6 +3,7 @@ package com.docutools.jocument.sample.model;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
 public class SampleModelData {
@@ -12,9 +13,15 @@ public class SampleModelData {
   static {
     try {
       PICARD = new Captain("Jean-Luc Picard",
-                4, Uniform.Red, new FirstOfficer("Riker", 3, Uniform.Red),
-                List.of(new Service("USS Enterprise"), new Service("US Defiant")),
-                Path.of(SampleModelData.class.getResource("/images/picardProfile.jpg").toURI()));
+              4,
+              Uniform.Red,
+              new FirstOfficer("Riker", 3, Uniform.Red),
+              List.of(new Service("USS Enterprise", Collections.singletonList(
+                      new PlanetServiceInfo("Mars", Collections.singletonList(new City("Nova Rojava"))))),
+                      new Service("US Defiant", List.of(
+                              new PlanetServiceInfo("Venus", List.of(new City("Nova Parisia"), new City("Birnin Zana"))),
+                              new PlanetServiceInfo("Jupiter", List.of(new City("Exarcheia"), new City("Nova Metalkova")))))),
+              Path.of(SampleModelData.class.getResource("/images/picardProfile.jpg").toURI()));
     } catch (URISyntaxException e) {
       throw new RuntimeException(e);
     }
